[update gradle and storage delete]